<resources>
    <string name="app_name">FireChat2</string>
    <string name="scroll">스크롤</string>
    <string name="action_removeAll">전체삭제</string>
    <string name="action_rename">이름변경</string>
    <string name="set_scroll_free">자유 스크롤 설정</string>
    <string name="send">전송</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="init_inform">앱 실행이 안 되면, 앱을 완전히 껐다. 다시 켜주세요.</string>
    <string name="action_photoUpload">사진 업로드</string>
    <string name="Exit">나가기</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="start">시작</string>
    <string name="search">검색</string>
    <string name="action_videoUpload">비디오 업로드</string>
    <string name="horizontal_mode">가로 고정</string>
    <string name="vertical_mode">세로 고정</string>
    <string name="action_fullScreen">전체화면</string>
    <string name="do_not_exit_for_upload">업로드 중간에 \n 나가지 마세요.</string>
    <string name="action_create_room">방 생성</string>
    <string name="init_inform_title">초기화 정보</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="shift">변경</string>
    <string name="roomTitle">방 이름</string>
    <string name="roomPassword">방 비밀번호</string>
    <string name="action_closeRoom">방 닫기</string>
    <string name="action_locationUpload">위치 업로드</string>
    <string name="action_musicUpload">음악 업로드</string>
    <string name="choose">선택</string>
    <string name="upload">업로드</string>
    <string name="play">재생</string>
    <string name="stop">정지</string>
    <string name="save">저장</string>
    <string name="action_binaryFileUpload">파일 업로드</string>
    <string name="Download">다운로드</string>
    <string name="action_showRoomMember">방 멤버 보기</string>
    <string name="action_showMemberLocation">멤버 위치 보기</string>
    <string name="action_showMidpoint">중간지점 보기</string>
</resources>
