<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/scroll"
        android:title="@string/scroll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_removeAll"
        android:title="@string/action_removeAll"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_closeRoom"
        android:title="@string/action_closeRoom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_photoUpload"
        android:title="@string/action_photoUpload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_videoUpload"
        android:title="@string/action_videoUpload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_musicUpload"
        android:title="@string/action_musicUpload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_showMemberLocation"
        android:title="@string/action_showMemberLocation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_showMidpoint"
        android:title="@string/action_showMidpoint"
        app:showAsAction="ifRoom" />
</menu>